--- a/jogo_adivinha.html
+++ b/jogo_adivinha.html
@@ -41,7 +41,7 @@ else {
 
 	mostra("Errou, O numero que chutou é menor q o sorteado");
 }
- mostra("mudanças no código");
+ mostra("Agora vai ser assim");
 }
 
 
